Style body items and correct header alignment

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     padding: 10px;
     background-color: gold;
     color: white;
-    gap: 400px;
+    gap: 450px;
     text-shadow: 2px 2px 2px rgb(240, 111, 6);
 }
 
@@ -67,10 +67,10 @@ body {
 }
 
 .button button {
-    font-size: 24px;
+    font-size: 20px;
     margin-top: 20px;
-    border-radius: 12px;
-    border-color: green;
+    border-radius: 8px;
+    border-color: rgb(46,138, 9);
     background-color: rgb(46, 138, 9);
     color: gold;
     text-shadow: 1px 1px 1px rgb(245, 62, 62);
